# portscan-delta-reporter

./: .env  .gitignore  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SETUP_GUIDE.md  WINDOWS_SETUP.md  app.db  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: COMMIT_TEMPLATE.md  PULL-REQUEST-TEMPLATE.md
.github/ISSUE_TEMPLATE/: assessment-submission.md  development-feature.md  document-review-task.md  feature-request.md  general-task.md
app/: __init__.py
app/models/: scan.py  scan_result.py  user.py
app/routes/: api.py  auth.py  dashboard.py
app/templates/: base.html  index.html
app/templates/dashboard/: edit_scan.html  index.html  new_scan.html  results.html  scans.html  view_result.html  view_scan.html
app/templates/errors/: error.html
app/utils/: time_est.py
client/: README.md  client_agent.py  client_config.py  config.example.yml  config2.yml  nmap.py  pyproject.toml  requirements.txt  setup.sh  setup_client.sh  start_client.sh
docs/: README.md  _config.yml  client-agent.md  client-setup.md  dev-manager.md  index.md  production-guide.md  server-setup.md
docs/client/: architecture.md  configuration.md  index.md  installation.md  troubleshooting.md  usage.md
docs/server/: api-reference.md  configuration.md  index.md  installation.md  usage.md
infra/: README.md  TESTING.md  client.dockerfile  dev-config.yml  docker-compose.yml  init-db.sh  portscan-client.service  prune-server.sh  quick-start.sh  server.dockerfile  server.env  test-config-client2.yml  test-config.yml  test-environment.sh
infra/test-web/: app.py  index.html  web.dockerfile
infra/test-web/templates/: index.html
instance/: app.db
scan_results/: scan_1_20250826_154537.json  scan_2_20250826_154456.json
scripts/: dev_manager.py  setup-dev-env.sh  setup-git-config.sh  start-all.sh
server/: .env.example  README.md  config.py  gunicorn_config.py  pyproject.toml  requirements-dev.txt  requirements-flexible.txt  requirements.txt  run.py  setup-windows.bat  setup.sh  setup_server.sh  setup_systemd.sh  start_server.sh
server/app/: __init__.py  config.py  forms.py  logging_config.py  scheduler.py
server/app/models/: __init__.py  alert.py  client.py  delta_report.py  scan.py  scan_result.py  scan_task.py  setting.py  user.py
server/app/routes/: api.py  auth.py  configs.py  dashboard.py  delta.py  main.py  scan.py  settings.py  sse.py
server/app/services/: alert_service.py  delta_service.py  settings_service.py  sse_service.py  websocket_service.py
server/app/static/css/: auth.css  style.css
server/app/static/js/: app.js  bootstrap.bundle.min.js  chart.min.js  delta_client.js  delta_reports.js  websocket_client.js
server/app/templates/: base.html  index.html
server/app/templates/admin/: configs.html  settings.html
server/app/templates/admin/configs/: _auth.html  _email.html  _env.html  _security.html
server/app/templates/auth/: _login_card.html  _sso_button.html  login.html  profile.html  register.html
server/app/templates/dashboard/: alerts.html  clients.html  create_scan.html  edit_scan.html  index.html  logs.html  onboarding.html  reports.html  scan_history.html  scan_reports.html  scans.html  view_report.html  view_scan.html
server/app/templates/errors/: 404.html
server/app/templates/partials/: sidebar.html
server/app/templates/security/: login_user.html  register_user.html
src/: requirements.txt  scanner.py  scheduler.py
tests/: Dockerfile  README.md  docker-compose.yml
