[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portscanner-server"
version = "1.0.0"
description = "Port Scanner Delta Reporter – Server"
readme = "README.md"
authors = [{name = "Jared Stanbrook", email = "jared@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic==1.16.5",
    "APScheduler==3.11.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "cachelib==0.13.0",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.1.7",
    "cryptography==46.0.1",
    "Flask==2.3.3",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.0.5",
    "Flask-Session==0.8.0",
    "Flask-SocketIO==5.3.6",
    "Flask-SQLAlchemy==3.0.5",
    "Flask-WTF==1.1.1",
    "h11==0.16.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.2",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "msal==1.34.0",
    "msgspec==0.19.0",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.3.0",
    "psutil==5.9.5",
    "pycparser==2.23",
    "PyJWT==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "python-engineio==4.12.2",
    "python-nmap==0.7.1",
    "python-socketio==5.13.0",
    "pytz==2025.2",
    "reportlab==4.0.4",
    "requests==2.32.5",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "SQLAlchemy==2.0.43",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "Werkzeug==2.3.7",
    "wsproto==1.2.0",
    "WTForms==3.2.1",
    "gunicorn==23.0.0",
    "eventlet==0.40.3",
]

[project.optional-dependencies]
dev = [
    "black==23.7.0",
    "flake8==6.0.0",
    "mccabe==0.7.0",
    "mypy_extensions==1.1.0",
    "pathspec==0.12.1",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "pycodestyle==2.10.0",
    "pyflakes==3.0.1",
    "pytest==7.4.2",
    "pytest-flask==1.2.0",
    "iniconfig==2.1.0",
]

[project.scripts]
portscanner-server = "run:main"

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]